--- a/TODO
+++ b/TODO
@@ -35,3 +35,5 @@ Backlog:
 Client Id provenance is random seed not the client email
 
 Nonce is an int equal to number of transactions performed by the client, start session is still required, the client persist the last nonce
+
+Generate keys
